# menmos-sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  profile.rs  push.rs  typing.rs  util.rs
src/fs/: dir.rs  error.rs  file.rs  mod.rs  util.rs
src/metadata_detector/: detector.rs  mod.rs
tests/: test_fs.rs
