[package]
name = "menmos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1"
tokio = {version = "1", features = ["full"]}
tokio-test = "0.4.2"

[dependencies]
bytes = "1"
futures = "0.3"

menmos-client = "0.0.10"
menmos-interface = "0.0.10"

snafu = "0.7"
